# Wide-Thought-Host

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  PRIVACY.md  README.md  SECURITY.md  TEST_REPORT.md  TEST_REPORT_DESKTOP.md
.cargo/: audit.toml  config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
.workbuddy/memory/: 2026-07-19.md  MEMORY.md
crates/codegen/wth-agent/src/: compaction.rs
crates/codegen/wth-agent/templates/: apply_patch_prompt.md  prompt.md  subagent_prompt.md
crates/codegen/wth-config/src/: lib.rs  loader.rs  managed_cache.rs  paths.rs  validation.rs
crates/codegen/wth-models/: default_models.json
crates/codegen/wth-models/src/: lib.rs
crates/codegen/wth-pager-bin/: Cargo.toml
crates/codegen/wth-pager-bin/src/: main.rs
crates/codegen/wth-pager/docs/user-guide/: 01-getting-started.md  02-authentication.md  03-keyboard-shortcuts.md  04-slash-commands.md  05-configuration.md  06-theming.md  07-mcp-servers.md  08-skills.md  09-plugins.md  10-hooks.md  11-custom-models.md  12-project-rules.md  13-memory.md  14-headless-mode.md  15-agent-mode.md  16-subagents.md  17-sessions.md  18-sandbox.md  19-plan-mode.md  21-terminal-support.md  22-permissions-and-safety.md  23-dashboard.md  24-monitoring-usage.md  README.md
crates/codegen/wth-pager/npm/grok/: README.md  package.json
crates/codegen/wth-pager/npm/grok-darwin-arm64/: README.md  package.json
crates/codegen/wth-pager/npm/grok-darwin-x64/: README.md  package.json
crates/codegen/wth-pager/npm/grok-linux-arm64/: README.md  package.json
crates/codegen/wth-pager/npm/grok-linux-x64/: .gitignore  README.md  package.json
crates/codegen/wth-pager/npm/grok-win32-arm64/: README.md  package.json
crates/codegen/wth-pager/npm/grok-win32-x64/: README.md  package.json
crates/codegen/wth-pager/scripts/: install-enterprise.ps1  install-enterprise.sh  install.ps1  install.sh
crates/codegen/wth-pager/src/: completions_cmd.rs
crates/codegen/xai-grok-pager-minimal/: Cargo.toml
crates/codegen/xai-grok-pager/src/: completions_cmd.rs
crates/codegen/xai-grok-shell/: Cargo.toml
crates/codegen/xai-grok-subagent-resolution/: Cargo.toml
crates/codegen/xai-grok-tools/: Cargo.toml
crates/codegen/xai-grok-update/src/: auto_update.rs  minimum_version.rs
crates/codegen/xai-grok-version/src/: lib.rs
crates/codegen/xai-grok-workspace/: Cargo.toml
crates/codegen/xai-sqlite-journal/src/: lib.rs
crates/desktop/wth-desktop/: Cargo.toml  build.rs  tauri.conf.json
crates/desktop/wth-desktop/capabilities/: default.json
crates/desktop/wth-desktop/icons/: icon.icns
crates/desktop/wth-desktop/src/: auth.rs  credentials.rs  main.rs  settings.rs  state.rs  tray.rs
crates/desktop/wth-desktop/src/ipc/: agent.rs  capabilities.rs  filesystem.rs  mod.rs  session.rs  terminal.rs
crates/desktop/wth-desktop/ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
crates/desktop/wth-desktop/ui/src/: App.tsx  index.css  main.tsx
crates/desktop/wth-desktop/ui/src/components/chat/: ChatView.tsx
crates/desktop/wth-desktop/ui/src/components/common/: CommandPalette.tsx  ContextMenu.tsx  ErrorBoundary.tsx  SegmentedControl.tsx  SplashScreen.tsx
crates/desktop/wth-desktop/ui/src/components/filetree/: FileTree.tsx
crates/desktop/wth-desktop/ui/src/components/settings/: Settings.tsx
crates/desktop/wth-desktop/ui/src/components/sidebar/: Sidebar.tsx
crates/desktop/wth-desktop/ui/src/components/terminal/: TerminalPanel.tsx
crates/desktop/wth-desktop/ui/src/hooks/: useResizable.ts
crates/desktop/wth-desktop/ui/src/i18n/: en-US.ts  index.ts  zh-CN.ts
crates/desktop/wth-desktop/ui/src/lib/: ipc.ts
crates/desktop/wth-desktop/ui/src/stores/: chat.ts
docs/config-templates/: config.toml
docs/superpowers/specs/: 2026-07-19-fix-windows-compile-defects-design.md  2026-07-19-tauri-build-packaging-design.md  2026-07-19-tauri-frontend-components-design.md  2026-07-19-tray-shortcut-storage-design.md  2026-07-19-workbuddy-ui-style-design.md  2026-07-22-desktop-experience-optimization-design.md
scripts/: cargo-gnu.cmd  privacy_egress_check.sh
(+25 files in other folders)
