[package]
name = "wth-desktop"
version = "0.1.0"
edition.workspace = true
description = "Wide Thought Host — Desktop Agent Application"
license = "Apache-2.0"

[[bin]]
name = "wth-desktop"
path = "src/main.rs"

[dependencies]
# Tauri v2 core
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"

# WTH core crates (local — package names retained for compatibility)
xai-grok-agent = { path = "../../codegen/wth-agent" }
xai-grok-config = { path = "../../codegen/wth-config" }
xai-grok-config-types = { path = "../../codegen/wth-config-types" }
xai-grok-models = { path = "../../codegen/wth-models" }
xai-tool-protocol = { path = "../../common/wth-tool-protocol" }
xai-tool-runtime = { path = "../../common/wth-tool-runtime" }
xai-tool-types = { path = "../../common/wth-tool-types" }

# xAI shell crates (for Agent runtime)
xai-grok-shell = { path = "../../codegen/xai-grok-shell" }
xai-grok-tools = { path = "../../codegen/xai-grok-tools" }
xai-grok-mcp = { path = "../../codegen/xai-grok-mcp" }
xai-grok-sampler = { path = "../../codegen/xai-grok-sampler" }
xai-grok-memory = { path = "../../codegen/xai-grok-memory" }
xai-grok-sandbox = { path = "../../codegen/xai-grok-sandbox" }
xai-grok-secrets = { path = "../../codegen/xai-grok-secrets" }
xai-grok-shared = { path = "../../codegen/xai-grok-shared" }

# Async runtime
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
dunce = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
